--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,78 @@
 * {
     margin: 0;
+    margin-top: 2vh;
     padding: 0;
+    font-family: sans-serif;
+}
+
+#nav-bar {
+    height: 8vh;
+    background-color: rgb(151, 151, 151);
+}
+
+#nav-bar ul {
+    display: inline-flex;
+    float: right;
+    margin-top: 24px;
+}
+
+#nav-bar ul li {
+    list-style-type: none;
+    margin-right: 40px;
+    padding: 6px;
+    border-radius: 6px;
+    transition: 0.1s;
+}
+
+#nav-bar ul li:hover {
+    background-color: rgb(230, 230, 230);
+}
+
+#nav-bar ul li a {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+}
+
+#login-btn {
+    margin-left: 40px;
+}
+
+#login-btn a {
+    color: red;
+}
+
+#vl {
+    background-color: rgb(200, 200, 200);
+    width: 1px;
+}
+
+#container {
+    height: 100vh;
+    background-color: rgb(228, 228, 228);
+}
+
+#main-container {
+    display: grid;
+    justify-items: center;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 4vw;
+    grid-row-gap: 4vh;
+    margin: 0 auto;
+    width: 80%;
+}
+
+.boxes {
+    padding: 40px;
+    border-radius: 10px;
+    height: 30vh;
+    width: 14vw;
+    background-color: rgb(23, 99, 112);
+    box-shadow: 0px 3px 8px 0px rgb(151, 151, 151);
+    transition: 0.4s;
+}
+
+.boxes:hover {
+    transform: translateY(-16px);
+    box-shadow: 0px 6px 16px 0px rgb(151, 151, 151);
 }
