--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,24 +1,15 @@
 #main-start {
   background-color: #1ea9ff;
   display: block;
-  width: 100vw;
+  max-width: 100%;
   height: 50vh;
-  transition: 1s;
+  transition: 0.5s;
 }
 #main-start:hover {
   background-color: #138dd8;
 }
 #main-start .container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   height: 50vh;
-}
-#main-start #info {
-  display: flex;
-  flex-direction: column;
-  width: 40vw;
-  justify-content: center;
 }
 #main-start #info #description {
   font-size: 20px;
@@ -28,14 +19,23 @@
   flex-direction: row;
 }
 #main-start #info #langs .lang-logo {
-  width: 80px;
+  width: 70px;
 }
 #main-start #photo {
   background-color: black;
   border-radius: 50%;
   border: solid 10px lightgreen;
-  width: 350px;
-  height: 350px;
+  width: 30vh;
+  height: 30vh;
+}
+
+@media only screen and (max-width: 992px), screen and (max-height: 600px) {
+  #main-start {
+    height: 100vh;
+  }
+  #main-start .container {
+    height: 100vh;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
