Updated css and some text

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,27 @@
+@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300;500&display=swap");
+.navbar-default {
+  background-color: #1ea9ff;
+}
+.navbar-default .navbar-brand {
+  color: black;
+  font-family: "Source Code Pro", monospace;
+  font-weight: 500;
+}
+.navbar-default .nav-item {
+  margin-right: 12px;
+  border-radius: 10%;
+  color: black;
+  transition: 0.3s;
+}
+.navbar-default .nav-item .nav-link {
+  color: black;
+  font-family: "Source Code Pro", monospace;
+  font-weight: 300;
+}
+.navbar-default .nav-item:hover {
+  background-color: #0091ea;
+}
+
 #main-start {
   background-color: #1ea9ff;
   display: block;
@@ -5,14 +29,17 @@
   height: 50vh;
   transition: 0.5s;
 }
-#main-start:hover {
-  background-color: #138dd8;
-}
 #main-start .container {
   height: 50vh;
 }
 #main-start #info #description {
+  text-align: center;
+  width: 30vw;
   font-size: 20px;
+  font-family: monospace;
+}
+#main-start #info #name {
+  font-family: monospace;
 }
 #main-start #info #langs {
   display: flex;
@@ -20,6 +47,12 @@
 }
 #main-start #info #langs .lang-logo {
   width: 70px;
+  margin-right: 16px;
+  border-radius: 10%;
+  transition: 0.3s;
+}
+#main-start #info #langs .lang-logo:hover {
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
 }
 #main-start #photo {
   background-color: black;
@@ -29,7 +62,23 @@
   height: 30vh;
 }
 
-@media only screen and (max-width: 992px), screen and (max-height: 600px) {
+@media only screen and (max-width: 992px) {
+  #main-start {
+    height: 100vh;
+  }
+  #main-start .container {
+    height: 100vh;
+  }
+
+  #description {
+    width: 80vw !important;
+  }
+
+  #photo {
+    margin-bottom: 40px;
+  }
+}
+@media only screen and (max-height: 600px) {
   #main-start {
     height: 100vh;
   }
