--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,23 +1,55 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300;500&display=swap');
+
+$background-color: rgb(30, 169, 255);
+
+.navbar-default {
+  background-color: $background-color;
+
+  .navbar-brand {
+    color: black;
+    font-family: 'Source Code Pro', monospace;
+    font-weight: 500;
+  }
+
+  .nav-item {
+    margin-right: 12px;
+    border-radius: 10%;
+    color: black;
+    transition: 0.3s;
+
+    .nav-link {
+      color: black;
+      font-family: 'Source Code Pro', monospace;
+      font-weight: 300;
+    }
+
+    &:hover {
+      background-color: darken($background-color, $amount: 10%);
+    }
+  }
+}
+
 #main-start {
-  background-color: rgb(30, 169, 255);
+  background-color: $background-color;
   display: block;
   max-width: 100%;
   height: 50vh;
   transition: 0.5s;
-
-  &:hover {
-    background-color: rgb(19, 141, 216);
-  }
 
   .container {
     height: 50vh;
   }
 
   #info {
-    
-
     #description {
+      text-align: center;
+      width: 30vw;
       font-size: 20px;
+      font-family: monospace;
+    }
+
+    #name {
+      font-family: monospace;
     }
 
     #langs {
@@ -26,6 +58,13 @@
 
       .lang-logo {
         width: 70px;
+        margin-right: 16px;
+        border-radius: 10%;
+        transition: 0.3s;
+        
+        &:hover {
+          box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+        }
       }
     }
   }
@@ -39,8 +78,7 @@
   }
 }
 
-
-@media only screen and (max-width: 992px), screen and (max-height: 600px) {
+@mixin responsive {
   #main-start {
     height: 100vh;
 
@@ -48,4 +86,19 @@
       height: 100vh;
     }
   }
+}
+
+@media only screen and (max-width: 992px) {
+  @include responsive;
+  #description {
+    width: 80vw !important;
+  }
+
+  #photo {
+    margin-bottom: 40px;
+  }
+}
+
+@media only screen and (max-height: 600px) {
+  @include responsive;
 }
