--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,6 +14,7 @@ $background-color: rgb(30, 169, 255);
   .nav-item {
     margin-right: 12px;
     border-radius: 10%;
+    padding: 0px 10px;
     color: black;
     transition: 0.3s;
 
@@ -96,6 +97,15 @@ $background-color: rgb(30, 169, 255);
 
   #photo {
     margin-bottom: 40px;
+  }
+
+  .navbar-nav {
+    margin-top: 10px;
+
+    .nav-item {
+      border-radius: 0% !important;
+      padding-left: 10px;
+    }
   }
 }
 
