--- a/public/css/main.css
+++ b/public/css/main.css
@@ -55,8 +55,8 @@
 #main-start #info #langs .lang-logo:hover {
   box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
 }
-#main-start #photo {
-  background-color: black;
+#main-start #photoContainer #photo {
+  object-fit: cover;
   border-radius: 50%;
   border: solid 10px lightgreen;
   width: 30vh;
