--- a/scss/main.scss
+++ b/scss/main.scss
@@ -70,12 +70,14 @@ $background-color: rgb(30, 169, 255);
     }
   }
 
-  #photo {
-    background-color: black;
-    border-radius: 50%;
-    border: solid 10px lightgreen;
-    width: 30vh;
-    height: 30vh;
+  #photoContainer {
+    #photo {
+      object-fit: cover;
+      border-radius: 50%;
+      border: solid 10px lightgreen;
+      width: 30vh;
+      height: 30vh;
+    }
   }
 }
 
