--- a/public/css/main.css
+++ b/public/css/main.css
@@ -27,7 +27,7 @@
   background-color: #1ea9ff;
   display: block;
   max-width: 100%;
-  height: 50vh;
+  height: 60vh;
   transition: 0.5s;
 }
 #main-start .container {
@@ -55,10 +55,15 @@
 #main-start #info #langs .lang-logo:hover {
   box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
 }
+#main-start #info #socials {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
 #main-start #photoContainer #photo {
   object-fit: cover;
   border-radius: 50%;
-  border: solid 10px lightgreen;
+  border: solid 2px black;
   width: 30vh;
   height: 30vh;
 }
@@ -94,6 +99,15 @@
   #main-start .container {
     height: 100vh;
   }
+}
+#top #name {
+  font-weight: 800;
+  font-size: 60px;
+  text-align: center;
+}
+#top #title {
+  font-size: 24px;
+  text-align: center;
 }
 
 /*# sourceMappingURL=main.css.map */
