--- a/scss/main.scss
+++ b/scss/main.scss
@@ -34,7 +34,7 @@ $background-color: rgb(30, 169, 255);
   background-color: $background-color;
   display: block;
   max-width: 100%;
-  height: 50vh;
+  height: 60vh;
   transition: 0.5s;
 
   .container {
@@ -68,13 +68,19 @@ $background-color: rgb(30, 169, 255);
         }
       }
     }
+
+    #socials {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+    }
   }
 
   #photoContainer {
     #photo {
       object-fit: cover;
       border-radius: 50%;
-      border: solid 10px lightgreen;
+      border: solid 2px black;
       width: 30vh;
       height: 30vh;
     }
@@ -113,4 +119,16 @@ $background-color: rgb(30, 169, 255);
 
 @media only screen and (max-height: 600px) {
   @include responsive;
+}
+
+#top {
+  #name {
+    font-weight: 800;
+    font-size: 60px;
+    text-align: center;
+  }
+  #title {
+    font-size: 24px;
+    text-align: center;
+  }
 }
