--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300;500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
-$background-color: rgb(30, 169, 255);
+$background-color: #1ea9ff;
 
 #main-start {
   background-color: $background-color;
@@ -17,10 +17,13 @@ $background-color: rgb(30, 169, 255);
   #photoContainer {
     #photo {
       object-fit: cover;
-      border-radius: 50%;
+      border-radius: 50px;
       border: solid 2px black;
       width: 30vh;
       height: 30vh;
+      background: #1ea9ff;
+      box-shadow:  33px 33px 66px #2481bb,
+                  -33px -33px 66px #23c2ff;
     }
   }
 }
