--- a/public/css/main.css
+++ b/public/css/main.css
@@ -68,6 +68,30 @@ footer {
   background: #00418b;
 }
 
+@media only screen and (max-width: 1440px) {
+  #main-start {
+    height: 100vh;
+  }
+  #main-start .container {
+    height: 100vh;
+  }
+
+  .block-container {
+    max-width: 80%;
+  }
+
+  #start {
+    flex-direction: column;
+  }
+  #start .social-logo {
+    margin-top: 20px;
+    width: 90px;
+  }
+  #start .lang-logo {
+    margin-top: 40px;
+    width: 90px;
+  }
+}
 @media only screen and (max-width: 1140px) {
   #main-start {
     height: 100vh;
@@ -90,6 +114,38 @@ footer {
   #start .lang-logo {
     margin-top: 40px;
     width: 70px;
+  }
+}
+@media only screen and (max-width: 728px) {
+  #main-start {
+    height: 100vh;
+  }
+  #main-start .container {
+    height: 100vh;
+  }
+
+  .block-container {
+    max-width: 80%;
+  }
+
+  #start {
+    flex-direction: column;
+  }
+  #start .social-logo {
+    margin-top: 20px;
+    width: 50px;
+  }
+  #start .lang-logo {
+    margin-top: 40px;
+    width: 50px;
+  }
+
+  #name {
+    font-size: 30px !important;
+  }
+
+  #title {
+    font-size: 18px !important;
   }
 }
 
