--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,14 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300;500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+}
+
 #main-start {
   background-color: #1ea9ff;
-  display: block;
-  max-width: 100%;
+  width: 100%;
   height: 60vh;
   transition: 0.5s;
-}
-#main-start .container {
-  height: 50vh;
 }
 #main-start #photoContainer #photo {
   object-fit: cover;
@@ -32,7 +33,7 @@
 }
 
 .block-container {
-  max-width: 40%;
+  width: 40%;
   margin: auto;
 }
 .block-container .card {
@@ -52,6 +53,14 @@ footer {
   font-family: monospace;
 }
 
+footer::after {
+  content: "";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+}
+
 ::-webkit-scrollbar {
   width: 8px;
 }
@@ -68,7 +77,7 @@ footer {
   background: #00418b;
 }
 
-@media only screen and (max-width: 1440px) {
+@media only screen and (max-width: 1320px) {
   #main-start {
     height: 100vh;
   }
@@ -77,7 +86,7 @@ footer {
   }
 
   .block-container {
-    max-width: 80%;
+    width: 80%;
   }
 
   #start {
@@ -101,7 +110,7 @@ footer {
   }
 
   .block-container {
-    max-width: 80%;
+    width: 80%;
   }
 
   #start {
@@ -116,7 +125,7 @@ footer {
     width: 70px;
   }
 }
-@media only screen and (max-width: 728px) {
+@media only screen and (max-width: 390px) {
   #main-start {
     height: 100vh;
   }
@@ -125,7 +134,7 @@ footer {
   }
 
   .block-container {
-    max-width: 80%;
+    width: 80%;
   }
 
   #start {
