--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,18 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300;500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
+
 $background-color: #1ea9ff;
 
 #main-start {
   background-color: $background-color;
-  display: block;
-  max-width: 100%;
+  width: 100%;
   height: 60vh;
   transition: 0.5s;
-
-  .container {
-    height: 50vh;
-  }
 
   #photoContainer {
     #photo {
@@ -42,7 +43,7 @@ $background-color: #1ea9ff;
 }
 
 .block-container {
-  max-width: 40%;
+  width: 40%;
   margin: auto;
 
   .card {
@@ -65,6 +66,15 @@ $background-color: #1ea9ff;
 footer {
   font-family: monospace;
 }
+
+footer::after {
+  content: "";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+}
+
 
 ::-webkit-scrollbar {
   width: 8px;
@@ -94,11 +104,11 @@ footer {
   }
 
   .block-container {
-    max-width: 80%;
+    width: 80%;
   }
 }
 
-@media only screen and (max-width: 1440px) {
+@media only screen and (max-width: 1320px) {
   @include responsive;
   #start {
     flex-direction: column;
@@ -133,7 +143,7 @@ footer {
   }
 }
 
-@media only screen and (max-width: 728px) {
+@media only screen and (max-width: 390px) {
   @include responsive;
 
   #start {
